# serializer version: 1
# name: test_predicate_matrix[is6bitFloat]
  dict({
    'BFloat16': False,
    'BFloat6': True,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': True,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[is8bitFloat]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': True,
    'BFloat8Float8': True,
    'BFloat8Float8_fnuz': True,
    'BFloat8_fnuz': True,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': True,
    'E8': True,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': True,
    'Float8BFloat8': True,
    'Float8BFloat8_fnuz': True,
    'Float8_fnuz': True,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isAnyBFloat8A]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': True,
    'BFloat8Float8': True,
    'BFloat8Float8_fnuz': True,
    'BFloat8_fnuz': True,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isAnyBFloat8B]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': True,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': True,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': True,
    'Float8BFloat8_fnuz': True,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isAnyBFloat8Float8]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': True,
    'BFloat8Float8_fnuz': True,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isAnyBFloat8]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': True,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': True,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isAnyFloat8A]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': True,
    'Float8BFloat8': True,
    'Float8BFloat8_fnuz': True,
    'Float8_fnuz': True,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isAnyFloat8BFloat8]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': True,
    'Float8BFloat8_fnuz': True,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isAnyFloat8B]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': True,
    'BFloat8Float8_fnuz': True,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': True,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': True,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isAnyFloat8]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': True,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': True,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isBFloat16]
  dict({
    'BFloat16': True,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isBFloat6]
  dict({
    'BFloat16': False,
    'BFloat6': True,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isBFloat8A]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': True,
    'BFloat8Float8': True,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isBFloat8B]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': True,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': True,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isBFloat8Float8]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': True,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isBFloat8Float8_fnuz]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': True,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isBFloat8]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': True,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isBFloat8_fnuzA]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': True,
    'BFloat8_fnuz': True,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isBFloat8_fnuzB]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': True,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': True,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isBFloat8_fnuz]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': True,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isComplex]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': True,
    'ComplexFloat': True,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isDoubleComplex]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': True,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isDouble]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': True,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isFloat4]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': True,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isFloat6]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': True,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isFloat8A]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': True,
    'Float8BFloat8': True,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isFloat8BFloat8]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': True,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isFloat8BFloat8_fnuz]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': True,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isFloat8B]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': True,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': True,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isFloat8]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': True,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isFloat8_fnuzA]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': True,
    'Float8_fnuz': True,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isFloat8_fnuzB]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': True,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': True,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isFloat8_fnuz]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': True,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isHalf]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': True,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isInt32]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': True,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isInt64]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': True,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isInt8]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': True,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isInt8x4]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': True,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isNone]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isReal]
  dict({
    'BFloat16': True,
    'BFloat6': True,
    'BFloat8': True,
    'BFloat8Float8': True,
    'BFloat8Float8_fnuz': True,
    'BFloat8_fnuz': True,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': True,
    'E5M3': True,
    'E8': True,
    'Float': True,
    'Float4': True,
    'Float6': True,
    'Float8': True,
    'Float8BFloat8': True,
    'Float8BFloat8_fnuz': True,
    'Float8_fnuz': True,
    'Half': True,
    'Int32': True,
    'Int64': True,
    'Int8': True,
    'Int8x4': True,
    'XFloat32': True,
  })
# ---
# name: test_predicate_matrix[isSingleComplex]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': True,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isSingle]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': True,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': False,
  })
# ---
# name: test_predicate_matrix[isXFloat32]
  dict({
    'BFloat16': False,
    'BFloat6': False,
    'BFloat8': False,
    'BFloat8Float8': False,
    'BFloat8Float8_fnuz': False,
    'BFloat8_fnuz': False,
    'ComplexDouble': False,
    'ComplexFloat': False,
    'Double': False,
    'E5M3': False,
    'E8': False,
    'Float': False,
    'Float4': False,
    'Float6': False,
    'Float8': False,
    'Float8BFloat8': False,
    'Float8BFloat8_fnuz': False,
    'Float8_fnuz': False,
    'Half': False,
    'Int32': False,
    'Int64': False,
    'Int8': False,
    'Int8x4': False,
    'XFloat32': True,
  })
# ---
# name: test_predicate_set_is_stable
  list([
    'is6bitFloat',
    'is8bitFloat',
    'isAnyBFloat8',
    'isAnyBFloat8A',
    'isAnyBFloat8B',
    'isAnyBFloat8Float8',
    'isAnyFloat8',
    'isAnyFloat8A',
    'isAnyFloat8B',
    'isAnyFloat8BFloat8',
    'isBFloat16',
    'isBFloat6',
    'isBFloat8',
    'isBFloat8A',
    'isBFloat8B',
    'isBFloat8Float8',
    'isBFloat8Float8_fnuz',
    'isBFloat8_fnuz',
    'isBFloat8_fnuzA',
    'isBFloat8_fnuzB',
    'isComplex',
    'isDouble',
    'isDoubleComplex',
    'isFloat4',
    'isFloat6',
    'isFloat8',
    'isFloat8A',
    'isFloat8B',
    'isFloat8BFloat8',
    'isFloat8BFloat8_fnuz',
    'isFloat8_fnuz',
    'isFloat8_fnuzA',
    'isFloat8_fnuzB',
    'isHalf',
    'isInt32',
    'isInt64',
    'isInt8',
    'isInt8x4',
    'isNone',
    'isReal',
    'isSingle',
    'isSingleComplex',
    'isXFloat32',
  ])
# ---
